css/css.zip.css/css/stylesheet.css
* {
  box-sizing: border-box;
}

* {
  margin: o;
}

/* ELEMENT SECTION */
body{
  font-family: sans-serif;
  font-size:110%;
  background-color: #FCF7F8;
}

header {
  text-align: center;
  color: rgb(0, 0, 0);
  background-color: #ddf08a;
  padding-bottom: 30px;
  padding-top: 1px;

  background-image: 
  url("/Images/colour-background.jpeg");
}

main {
  display: flex;
  flex-direction: row;
}

footer {
  background-color: #d3f054;
  text-align: center;
  color: black;
  padding-top: 1px;
  padding-bottom: 20px;
}

h5 {
  color: #b62e0c;
  font-size: 20px;
  font-weight: 700;
  font-family: cursive;
  border-style: solid;
  border-color: white;
  border-width: 2px;
  padding-left: 20px; 
}

/* CLASS SECTION */

.sections {
  background-color: ivory;
  text-align: center;
  font-size: 23px;
  border-radius: 45px;
  border-style: solid;
  border-width: 4px;
  margin-top: 20px;
  margin-right: 120px;
  margin-left: 120px;
}

.container {
  display: grid;
  height: 50vh;
  grid-template-columns: 33% 33% 33%;
  grid-template-rows: 1fr;
  grid-template-areas: "skill1 skill2 skill3";
}

.realSkillsDiv{
  margin: auto;
  display: grid;
  grid-gap: 10rem;
}

.ccoSkills {
  color: #b13759;
  font-size: 20px;
  font-weight: 700;
  font-family: cursive;
}

.experience {
  color: #1863a1;
  border-color: rgb(235, 153, 21);
}

.icons:hover{
  transform: translateY(-1rem)
  scale(1.5)
}

.icons {
  border-radius: 50%;
  width: 50px;
  height: 50px;
  margin-left: 7px;
  margin-right: 7px;
}

.carouselItems img {
  height: 20vw;
}

.navbarMenu {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  color: #06375f;
}

#menuButton {
cursor:pointer;
height: 80%;
width: 25%;
text-align: center;
}

#menuButton:hover {background-color: #eb1616}

#menuButton:active {
  background-color: #f5d376;
  box-shadow: 0 5px rgb(231, 200, 60);
  transform: translateY(4px);
}

 
/* ID SECTION */

#name {
  color: black;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-weight: bold;
  font-style: inherit;
  font-size: 80px;
  margin-top: 20px;
  margin-bottom: -1px;
}

#resume {
  color: #f88d12;
  font-family: cursive;
  font-weight: lighter;
  font-style: italic;
  font-size: 30px;
  background-color: white;
}

#image {
  border-style: solid;
  border-width: 3px;
  border-radius: 100%;
  border-color: rgb(14, 12, 12);
  margin-top: 1px;
  margin-bottom: 1px;
  width: 250px;
  height: 200px;
  max-width: 100%;
}

#imageDiv {
  margin-top: 1px;
  margin-bottom: -10px;
}

#introDiv {
  background-color: #fff;
  border-style: solid;
  border-width: 10px;
  border-color: #e2d95c;
  margin-right: 50px;
  margin-left: 50px;
  padding-top: 10px;
  padding-left: 20px;
  padding-right: 20px;
}

#introduction {
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
}

#aside {
  color: rgb(11, 131, 131);
  background-color: #ffbf69;
  width: 100px;
  height: 40px;
  padding-left: 5px;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 5px;
}

#statement {
  text-align: center;
  font-size: 30px;
  font-family: serif;
}

#realSkills {
  background-color: #52b69a ;
  padding-bottom: 30px;
  padding-top: 1px;
  padding-left: 30px;
  padding-right: 30px;
  border-radius: 85px;
}

#realSkillsDiv {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}


#realSkills {
  margin: 30px;
  margin-top: 40px;
  margin-bottom: 40px;
}

#creativeSkills {
 border: 1px solid;
 padding: 10px;
 width: 20%;
 margin-left: 60px;
 margin-bottom: 10px;
 grid-area: skill1;
}

#computerSkills {
 border: 1px solid;
 padding: 10px;
 width: 20%;
 margin-bottom: 10px;
 grid-area: skill2;
}

#otherSkills {
  border: 1px solid;
  padding: 10px;
  width: 20%;
  margin-right: 60px;
  margin-bottom: 10px;
  grid-area: skill3;
}


#realEducation {
  background-color: #c9d68c;
  padding-bottom: 30px;
  padding-top: 1px;
  padding-left: 30px;
  padding-right: 30px;
  border-radius: 85px;
  margin: 30px;
  margin-top: 40px;
  margin-bottom: 40px;
}

#realExperience {
  background-color: #e8d1c5;
  padding-bottom: 30px;
  padding-top: 1px;
  padding-left: 30px;
  padding-right: 30px;
  border-radius: 85px;
  margin: 30px;
  margin-top: 40px;
  margin-bottom: 40px;
}

#linksDiv {
  display: inline-block;
}


#socialMedia {
  font-size: 20px;
  font-family: monospace;
  font-weight: bold;
}

#carouselExampleIndicators {
  padding-left: 40%;
  margin-bottom: 27%;
}



/*Form*/

form{
  text-align: center; 
  justify-content: space-between;
  padding-bottom: 15px;
  background-image: 
  url("/Images/colour-backgroun.jpeg");
  padding-top: 5%;
  padding-right: 6%;
  border-radius: 90%;
}

label{
  width: 80px;
  display: inline-block;
  text-align: right;   
  font-weight: bolder;
}

input [type="checkbox"] [type="radio"]{
  margin-left: 32px;
}


#online {
  font-size: 13px;
  font-family: cursive;
  padding: 1px;
}

#about{
  height: 100px;
}

#submit{
  font-weight: 300;
  font-weight: bold;
  background-color: rgb(240, 112, 89);
  border-radius: 10px;
  border: 5px;
  width: 150px;
  margin-top: 2%;
  margin-bottom: 5%;
}


/* Media Queries */

@media (max-width: 380px){
  .realSkillsDiv {
    grid-template-columns: repeat(1, 1fr);
  }

  #introDiv {
    margin-right: 30px;
    margin-left: 30px;
    padding-top: 10px;
    padding-left: 10px;
    padding-right: 10px;
  }

  .sections {
    margin-right: 20px;
    margin-left: 20px;
  }

}

@media (max-width: 430px) {
  .realSkillsDiv { 
    grid-template-columns: repeat(2,1fr); 
  }

  #introDiv {
    margin-right: 30px;
    margin-left: 30px;
    padding-top: 10px;
    padding-left: 10px;
    padding-right: 10px;

  .sections {
    margin-right: 20px;
    margin-left: 20px;
  }
}

@media (max-width: 700px) {
  .realSkillsDiv { 
    grid-template-columns: repeat(2,1fr); 
  }


  .sections {
    margin-right: 20px;
    margin-left: 20px;
  }
}

@media only screen and (max-width:550px){
  .container {
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr 1fr; 
   grid-template-areas:
    "skill1"
    "skill2"
    "skill3";
  }

  #creativeSkills {
    border: 1px solid;
    padding: 10px;
    width: 10%;
    margin-left: 10px;
    margin-bottom: 10px;
    grid-area: skill1;
   }
   
   #computerSkills {
    border: 1px solid;
    padding: 5px;
    width: 10%;
    margin-bottom: 10px;
    grid-area: skill2;
   }
   
   #otherSkills {
     border: n;
   }
}

